# breadfund

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  local.Dockerfile  local.docker-compose.yml  makefile  pyproject.toml
.github/workflows/: build.yml  deploy.yml  lint.yml
gunicorn/: gunicorn_conf.py
migrations/: env.py
migrations/versions/: 0e0d0630b3bf_add_progress_field_to_campaign_.py  44f8c6f4e8ea_add_campaign_donation_and_feedpost_.py  72c0e73f4cba_add_campaign_donations_and_feedpost_.py
requirements/: dev.txt  prod.txt
scripts/: start-prod.sh
src/: __init__.py  config.py  constants.py  database.py  exceptions.py  main.py  redis.py  schemas.py
src/campaign/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/user/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py
